--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <a href="/">Início</a>
       <a href="/projetos/">Projetos</a>
-      <a href="mailto:pm_pedromiguel@hotmail.com">+351 917197504</a>
+      <a href="mailto:pm_pedromiguel@hotmail.com">pm_pedromiguel@hotmail.com</a>
     </nav>
   </header>
 
