--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <a href="/">Início</a>
-      <a href="/projetos/">Projetos</a>
+      <a href="/projects/">Projetos</a>
       <a href="mailto:pm_pedromiguel@hotmail.com">pm_pedromiguel@hotmail.com</a>
     </nav>
   </header>
