--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <header>
     <nav>
-      <a href="/">Início</a>
-      <a href="/projects/">Projetos</a>
+      <a href=>Início</a>
+      <a href="/pmcosta87/projects/">Projetos</a>
       <a href="mailto:pm_pedromiguel@hotmail.com">pm_pedromiguel@hotmail.com</a>
     </nav>
   </header>
@@ -18,7 +18,7 @@
   <main>
     <h1>Olá, sou o Pedro Costa</h1>
     <p>Mestre em Engenharia e Gestão de Sistemas de Informação na Universidade do Minho. Aqui encontras os meus projetos.</p>
-    <p><a href="/projects/">Ver projetos →</a></p>
+    <p><a href="/pmcosta87/projects/">Ver projetos →</a></p>
   </main>
 
   <footer>© <span id="y"></span> Pedro Costa</footer>
