--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <a href="/">Início</a>
-      <a href="/projetos/">Projetos</a>
+      <a href="/Portefolio/projetos/">Projetos</a>
       <a href="mailto:pm_pedromiguel@hotmail.com">pm_pedromiguel@hotmail.com</a>
     </nav>
   </header>
@@ -18,7 +18,7 @@
   <main>
     <h1>Olá, sou o Pedro Costa</h1>
     <p>Mestre em Engenharia e Gestão de Sistemas de Informação na Universidade do Minho. Aqui encontras os meus projetos.</p>
-    <p><a href="/projetos/">Ver projetos →</a></p>
+    <p><a href="/Portefolio/projetos/">Ver projetos →</a></p>
   </main>
 
   <footer>© <span id="y"></span> Pedro Costa</footer>
