--- a/projectos/CIS/index.html
+++ b/projectos/CIS/index.html
@@ -25,7 +25,7 @@
   <header>
     <nav>
       <a href="/">Início</a>
-      <a href="/projetos/">Projetos</a>
+      <a href="/Portefolio/projetos/">Projetos</a>
     </nav>
   </header>
 
