--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
 <figure>
 
   <picture>
-    <!-- <source media="(max-width: 480px)" srcset="/assets/img/prof_pic-480.webp" />
-    <source media="(max-width: 800px)" srcset="/assets/img/prof_pic-800.webp" />
-    <source media="(max-width: 1400px)" srcset="/assets/img/prof_pic-1400.webp" />
+    <!-- <source media="(max-width: 480px)" srcset="/assets/img/IMG1515_-480.webp" />
+    <source media="(max-width: 800px)" srcset="/assets/img/IMG1515_-800.webp" />
+    <source media="(max-width: 1400px)" srcset="/assets/img/IMG1515_-1400.webp" />
     -->
 
     <!-- Fallback to the original file -->
-    <img class="img-fluid z-dept-1 rounded" src="/assets/img/prof_pic.png" alt="prof_pic.png">
+    <img class="img-fluid z-dept-1 rounded" src="/assets/img/IMG1515_.jpg" alt="IMG1515_.jpg">
 
   </picture>
 
